cmake_minimum_required(VERSION 3.16)
project(fasttrade CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_COMPILER clang++-14)
set(CMAKE_CXX_FLAGS "-O3 -march=native -pthread")
add_library(ft_core INTERFACE)
target_include_directories(ft_core INTERFACE ${CMAKE_SOURCE_DIR})
message(STATUS "FastTrade ready")
